title card overlap fix with hero image and pledge card WIP

--- a/src/scss/_util.scss
+++ b/src/scss/_util.scss
@@ -47,3 +47,7 @@
 .space-between {
     justify-content: space-between;
 }
+
+.vertical-align-middle {
+    vertical-align: middle;
+}
